--- a/views/front/auth/register2.ejs
+++ b/views/front/auth/register2.ejs
@@ -99,7 +99,7 @@
                     <div class="grid lg:grid-cols-2 gap-3">
                         <div>
                             <label class="mb-0"> Telefon: (opsiyonel)  </label>
-                            <input type="text" placeholder="+543 5445 0543" class="bg-gray-100 h-12 mt-2 px-3 rounded-md w-full">
+                            <input type="text" placeholder="+____ ___ __ __" class="bg-gray-100 h-12 mt-2 px-3 rounded-md w-full">
                         </div>
                     </div>
 
