--- a/views/front/layout.ejs
+++ b/views/front/layout.ejs
@@ -34,7 +34,7 @@
                 display: none;
             }
             #logo {
-                padding-left: 17vw;
+                padding-left: 22vw;
                 font-family: 'Francois One', sans-serif;
             }
         }
@@ -59,8 +59,8 @@
                             </span>
                             <div id="logo">
                                 <a href="/">
-                                    <img src="../../../newpan.png" alt="">
-                                    <img src="../../../newpan.png" class="logo_mobile" alt="">
+                                    <img src="../../../newpan.png" alt="" class="w-32">
+                                    <img src="../../../newpan.png" class="logo_mobile w-32" alt="">
                                 </a>
                             </div>
                         </div>
