--- a/views/front/auth/register2.ejs
+++ b/views/front/auth/register2.ejs
@@ -4,28 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Favicon -->
+    <script>
+        window.METRO_LOCALE = "en-US";
+    </script>
+    <script src="../../metro.js"></script>
+    <meta name="metro4:locale" content="tr-TR">
     <link href="../../../front/images/favicon.png" rel="icon" type="image/png">
-
-    <!-- Basic Page Needs
-        ================================================== -->
-    <title>Socialite Template</title>
+    <title>PANİPAL KAYIT OL</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Socialite is - Professional A unique and beautiful collection of UI elements">
-
-    <!-- icons
-    ================================================== -->
+    <meta name="description" content="PANİPAL  - KAYIT OL">
     <link rel="stylesheet" href="../../../front/scss/icons.css">
-
-    <!-- CSS 
-    ================================================== -->
     <link rel="stylesheet" href="../../../front/css/uikit.css">
     <link rel="stylesheet" href="../../../front/css/style.css">
     <link rel="stylesheet" href="../../../front/css/icons.css">
     <link rel="stylesheet" href="../../../front/css/tailwind.css">
-
+    <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro.min.css">
+    <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-colors.min.css">
+    <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-rtl.min.css">
+    <link rel="stylesheet" href="https://cdn.metroui.org.ua/v4/css/metro-icons.min.css">
+    <script>
+        var locales = Metro.utils.getLocales();
+        console.log(locales);
+    </script>
     <style>
         input,
         .bootstrap-select.btn-group button {
@@ -49,14 +50,9 @@
 
                 <div class="flex items-center lg:justify-between justify-around">
 
-                    <a href="trending.html">
+                    <a href="/">
                         <img src="../../../newpan.png" alt="" class="w-32">
                     </a>
-
-                    <div class="capitalize flex font-semibold hidden lg:block my-2 space-x-3 text-center text-sm">
-                        <a href="form-login.html" class="py-3 px-4">Login</a>
-                        <a href="form-register.html" class="bg-purple-500 purple-500 px-6 py-3 rounded-md shadow text-white">Register</a>
-                    </div>
 
                 </div>
             </div>
@@ -77,6 +73,10 @@
                             <label class="mb-0"> Soyadınız </label>
                             <input type="text" name="surname" placeholder="Soyadınız" class="bg-gray-100 h-12 mt-2 px-3 rounded-md w-full">
                         </div>
+                    </div>
+                    <div class="form-group">
+                        <label>Doğum Tarihiniz</label>
+                        <input name="dt" data-role="datepicker" data-locale="tr-TR">
                     </div>
                     <div class="uk-form-group">
                         <label for="mb-0"> Cinsiyetiniz</label>
@@ -139,8 +139,7 @@
     <script src="../../../front/js/custom.js"></script>
     <script src="../../../front/js/bootstrap-select.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-
-
+    <script src="https://cdn.metroui.org.ua/v4.3.2/js/metro.min.js"></script>
 </body>
 
 </html>
