--- a/views/front/auth/register2.ejs
+++ b/views/front/auth/register2.ejs
@@ -7,7 +7,6 @@
     <script>
         window.METRO_LOCALE = "en-US";
     </script>
-    <script src="../../metro.js"></script>
     <meta name="metro4:locale" content="tr-TR">
     <link href="../../../front/images/favicon.png" rel="icon" type="image/png">
     <title>PANİPAL KAYIT OL</title>
@@ -139,7 +138,7 @@
     <script src="../../../front/js/custom.js"></script>
     <script src="../../../front/js/bootstrap-select.min.js"></script>
     <script src="https://unpkg.com/ionicons@5.2.3/dist/ionicons.js"></script>
-    <script src="https://cdn.metroui.org.ua/v4.3.2/js/metro.min.js"></script>
+    <script src="../../../front/metro.min.js"></script>
 </body>
 
 </html>
