--- a/views/front/setting.ejs
+++ b/views/front/setting.ejs
@@ -10,10 +10,6 @@
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İletişim </h2>
-            </span>
-            <hr style="margin-top: 22px;">
-            <span class="badge">
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Güvenlik </h2>
             </span>
             <hr style="margin-top: 22px;">
@@ -22,15 +18,23 @@
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Erişebilirlik </h2>
+            </span>
+            <hr style="margin-top: 22px;">
+            <span class="badge">
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Reklam Ayarları </h2>
+            </span>
+            <hr style="margin-top: 22px;">
+            <span class="badge">
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İletişim </h2>
+            </span>
+            <hr style="margin-top: 22px;">
+            <span class="badge">
                 <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Koşullar </h2>
             </span>
-            <hr style="margin-top: 22px;">
+            <hr style="margin-top: 22px; border: 2px solid darkgray;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Reklamsız Kullan </h2>
-            </span>
-            <hr style="margin-top: 22px;">
-            <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Reklam Ver </h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px; color: orangered;"> Çıkış Yap <ion-icon name="log-out-outline" style="float: right; font-size: 22pt;"></ion-icon> </h2>
             </span>
             <hr style="margin-top: 22px;">
         </div>
