--- a/views/front/setting.ejs
+++ b/views/front/setting.ejs
@@ -26,7 +26,7 @@
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İletişim </h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İstatistik </h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
