--- a/views/front/setting.ejs
+++ b/views/front/setting.ejs
@@ -2,35 +2,35 @@
     <div class="main_content">
         <div class="mcontainer">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Hesap <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Hesap <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Kişisel <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Kişisel <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Güvenlik <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Güvenlik <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Bağlantılar <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Bağlantılar <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Erişebilirlik <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Erişebilirlik <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Reklam Ayarları <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Reklam Ayarları <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İstatistik <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> İstatistik <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Koşullar <ion-icon style="float: right;" name="arrow-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Koşullar <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px; border: 2px solid darkgray;">
             <span class="badge">
