--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -1,4 +1,4 @@
-<% layout("layout") %>
+<% layout("../layout") %>
     <div class="main_content">
         <div class="mcontainer">
             <span class="badge">
