--- a/views/front/set/hesap.ejs
+++ b/views/front/set/hesap.ejs
@@ -1,6 +1,7 @@
 <% layout("../layout") %>
     <div class="main_content">
         <div class="mcontainer">
+            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Hesap Ayarları</h2>
             <span class="badge">
                 <label style="padding-left: 20px; padding-top: 10px;">Kullanıcı Adı</label>
                 <input type="text" class="uk-input" placeholder="@ornek">
