--- a/views/front/set/baglanti.ejs
+++ b/views/front/set/baglanti.ejs
@@ -4,7 +4,7 @@
         crossorigin="anonymous" />
     <div class="main_content">
         <div class="mcontainer">
-            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Hesap Ayarları</h2>
+            <h2 class="text-2xl font-semibold text-center" style="margin-top: 20px;"> Bağlantılar</h2>
             <span class="badge">
                 <label style="padding-left: 20px; padding-top: 10px;"> <i class="fa fa-instagram fa-2x"></i> </label>
                 <input type="text" class="uk-input" placeholder="@ornek">
