--- a/views/front/auth/register2.ejs
+++ b/views/front/auth/register2.ejs
@@ -81,9 +81,9 @@
                         <label for="mb-0"> Cinsiyetiniz</label>
                         <div class="uk-position-relative">
                             <select name="cinsiyet" class="selectpicker uk-input bg-secondary">
-                                <option value="">Erkek</option>
-                                <option value="">Kadın</option>
-                                <option value="">Belirtmek istemiyorum</option>
+                                <option>Erkek</option>
+                                <option>Kadın</option>
+                                <option>Belirtmek istemiyorum</option>
                             </select>
                         </div>
                     </div>
