--- a/views/back/layout.ejs
+++ b/views/back/layout.ejs
@@ -111,6 +111,12 @@
                                         <span>Üyeler</span>
                                     </a>
                                 </li>
+                                <li>
+                                    <a href="/admin/yazar">
+                                        <i class="fa fa-user-secret" aria-hidden="true"></i>
+                                        <span>Yazar</span>
+                                    </a>
+                                </li>
                                 <li class="nav-parent">
                                     <a>
                                         <i class="fa fa-columns" aria-hidden="true"></i>
