--- a/views/front/set/setting.ejs
+++ b/views/front/set/setting.ejs
@@ -2,19 +2,15 @@
     <div class="main_content">
         <div class="mcontainer">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Hesap <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/hesap">Hesap</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Kişisel <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/guvenlik">Güvenlik</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Güvenlik <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
-            </span>
-            <hr style="margin-top: 22px;">
-            <span class="badge">
-                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> Bağlantılar <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
+                <h2 class="text-2xl font-semibold" style="margin-top: 20px;"> <a href="/baglanti">Bağlantılar</a> <ion-icon style="float: right;" name="chevron-forward-outline"></ion-icon></h2>
             </span>
             <hr style="margin-top: 22px;">
             <span class="badge">
