--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -30,7 +30,7 @@
                                 text-align: center;
                                 margin: 5px;
                                 text-decoration: none;" class="bg-gray-100 py-1.5 px-4 rounded-full">
-                                <%= element.tag %>
+                                <b><%= element.tag %></b>
                             </a>
                         <% }) %>
                     </div>
