--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -97,9 +97,9 @@
                             <hr style="margin-top: -0px;">
                             <% }) %>
                     </ul>
-                    <div class="flex flex-wrap gap-1 responsive-tab">
+                    <!-- <div class="flex flex-wrap gap-1 responsive-tab">
                         <img src="../../../banner.png" style="width: 100%;" class="img-responsive">
-                    </div>
+                    </div> -->
                 </div>
                 
                 <div id="son" class="lg:w-1/4 w-full flex-shrink-0">
