--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -24,11 +24,13 @@
                             <input placeholder="Lütfen eklemek istediğiniz içeriği giriniz." v-model="title" class="bg-gray-100 hover:bg-gray-200 flex-1 h-10 px-6 rounded-full">
                         </div>
                     </div> -->
-                    <div style="overflow: auto; white-space: nowrap;">
+                    <div style="overflow: auto; white-space: nowrap">
                         <% etiket.forEach(element => { %>
                             <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase; display: inline-block;
                                 text-align: center;
                                 margin: 5px;
+                                background-color: lightblue;
+                                border: 1px solid darkcyan;
                                 text-decoration: none;" class="bg-gray-100 py-1.5 px-4 rounded-full">
                                 <b><%= element.tag %></b>
                             </a>
