--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -29,14 +29,14 @@
                             <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase; display: inline-block;
                                 text-align: center;
                                 margin: 5px;
-                                background-color: lightblue;
-                                border: 1px solid darkcyan;
+                                background-color: #4FC3F7;
+                                border: 1px solid #0091EA;
                                 text-decoration: none;" class="bg-gray-100 py-1.5 px-4 rounded-full">
                                 <b><%= element.tag %></b>
                             </a>
                         <% }) %>
                     </div>
-                    
+                    <hr>
                     <br>
                     <div class="flex justify-between relative md:mb-4 mb-3">
                         <div class="flex-1">
