--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -29,8 +29,7 @@
                             <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase; display: inline-block;
                                 text-align: center;
                                 margin: 5px;
-                                background-color: #B3E5FC
-;
+                                background-color: #B3E5FC;
                                 border: 1px solid #0091EA;
                                 text-decoration: none;" class="bg-gray-100 py-1.5 px-4 rounded-full">
                                 <b><%= element.tag %></b>
