--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -31,6 +31,7 @@
                                 margin: 5px;
                                 background-color: #E3F2FD;
                                 border: 1px solid #0091EA;
+                                color: #0D47A1;
                                 text-decoration: none;" class="bg-gray-100 py-1.5 px-4 rounded-full">
                                 <b><%= element.tag %></b>
                             </a>
