--- a/views/front/etiket.ejs
+++ b/views/front/etiket.ejs
@@ -23,12 +23,18 @@
                         </div>
                     </div> -->
                     <br>
-                    <div class="flex flex-wrap gap-1 responsive-tab ">
+                    <div style="overflow: auto; white-space: nowrap">
                         <% etiket.forEach(element => { %>
-                            <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase;" class="bg-gray-100 py-1.5 px-4 rounded-full">
-                                <%= element.tag %>
+                            <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase; display: inline-block;
+                                text-align: center;
+                                margin: 5px;
+                                background-color: #E3F2FD;
+                                border: 1px solid #0091EA;
+                                color: #0D47A1;
+                                text-decoration: none;" class="bg-gray-100 py-1.5 px-4 rounded-full">
+                                <b><%= element.tag %></b>
                             </a>
-                            <% }) %>
+                        <% }) %>
                     </div>
                     <br><br>
                     <div class="flex justify-between relative md:mb-4 mb-3">
