--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -76,20 +76,20 @@
                                                 <tr>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 16vw;" name="share-social-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl">3</span>
+                                                            <ion-icon style="padding-left: 16vw;" name="share-social-outline"></ion-icon>
+                                                            <span class="text-md">3</span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 17vw;" name="heart-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl"> 3 </span>
+                                                            <ion-icon style="padding-left: 17vw;" name="heart-outline"></ion-icon>
+                                                            <span class="text-md"> 3 </span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 17vw;" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl"> <%= element.comment.length %>  </span>
+                                                            <ion-icon style="padding-left: 17vw;" name="chatbubble-ellipses-outline"></ion-icon>
+                                                            <span class="text-md"> <%= element.comment.length %>  </span>
                                                         </div>
                                                     </td>
                                                 </tr>
