--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -71,25 +71,26 @@
                                             <!-- <p class="leading-6 line-clamp-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</p> -->
                                         </div>
                                     </div>
+                                    <br>
                                     <div class="row" style="margin-top: -15px;">
                                             <table>
                                                 <tr>
                                                     <td>
                                                         <div class="flex items-center">
                                                             <ion-icon style="padding-left: 16vw;" name="share-social-outline"></ion-icon>
-                                                            <span class="text-md">3</span>
+                                                            <span class="text-sm">22</span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
                                                             <ion-icon style="padding-left: 17vw;" name="heart-outline"></ion-icon>
-                                                            <span class="text-md"> 3 </span>
+                                                            <span class="text-sm">22</span>
                                                         </div>
                                                     </td>
                                                     <td>
                                                         <div class="flex items-center">
                                                             <ion-icon style="padding-left: 17vw;" name="chatbubble-ellipses-outline"></ion-icon>
-                                                            <span class="text-md"> <%= element.comment.length %>  </span>
+                                                            <span class="text-sm"><%= element.comment.length %>11 </span>
                                                         </div>
                                                     </td>
                                                 </tr>
