--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -39,7 +39,7 @@
                     </div>
                     <hr>
                     <br>
-                    <div class="flex justify-between relative md:mb-4 mb-3">
+                    <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: -5px;">
                         <div class="flex-1">
                             <p class="text-center" style="font-family: 'Shadows Into Light', cursive !important; font-size: 20pt !important; color: steelblue;"> <b>Kesfet</b> </p>
                             <!-- <nav class="cd-secondary-nav border-b md:m-0 -mx-4">
