--- a/views/front/index.ejs
+++ b/views/front/index.ejs
@@ -24,7 +24,7 @@
                             <input placeholder="Lütfen eklemek istediğiniz içeriği giriniz." v-model="title" class="bg-gray-100 hover:bg-gray-200 flex-1 h-10 px-6 rounded-full">
                         </div>
                     </div> -->
-                    <div style="overflow: auto; white-space: nowrap">
+                    <div style="overflow: auto; white-space: nowrap; margin-top: -24px;">
                         <% etiket.forEach(element => { %>
                             <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase; display: inline-block;
                                 text-align: center;
