--- a/views/front/etiket.ejs
+++ b/views/front/etiket.ejs
@@ -22,8 +22,7 @@
                             <input placeholder="Lütfen eklemek istediğiniz içeriği giriniz." v-model="title" class="bg-gray-100 hover:bg-gray-200 flex-1 h-10 px-6 rounded-full">
                         </div>
                     </div> -->
-                    <br>
-                    <div style="overflow: auto; white-space: nowrap">
+                    <div style="overflow: auto; white-space: nowrap; margin-top: -24px;">
                         <% etiket.forEach(element => { %>
                             <a href="/sozluk/<%= element.tag %>" style="text-transform: lowercase; display: inline-block;
                                 text-align: center;
@@ -36,8 +35,8 @@
                             </a>
                         <% }) %>
                     </div>
-                    <br><br>
-                    <div class="flex justify-between relative md:mb-4 mb-3">
+                    <hr>
+                    <div class="flex justify-between relative md:mb-4 mb-3" style="margin-top: 4px;">
                         <div class="flex-1">
                             <p class="text-center" style="font-family: 'Shadows Into Light', cursive !important; font-size: 20pt !important; color: steelblue; text-transform: lowercase;"> <b><%= konu %></b> </p>
                             <!-- <nav class="cd-secondary-nav border-b md:m-0 -mx-4">
@@ -57,7 +56,7 @@
                             <li style="margin-top: 4px;">
                                 <a href="/single/<%= element._id %>">
                                     <div class="flex items-start pl-3 space-x-4">
-                                        <img src="../../../front/images/avatars/avatar-2.jpg" alt="" class="w-16 h-16 rounded-full">
+                                        <img src="../../../front/images/avatars/avatar-2.jpg" style="width: 40px; height: 40px;" class="rounded-full">
                                         <div class="flex-1">
                                             <!-- <h3 class="text-lg font-semibold line-clamp-1"> -->
                                             <h3 class="text-lg font-semibold">
@@ -66,33 +65,32 @@
                                             <p class="text-sm text-gray-400 mb-2"> Yazar: <span data-href="%40tag-dev.html">Abdullah Bektaş</span> |
                                                 <%= moment(element.createdAt,"ddd MMM DD YYYY HH:mm:ss GMT Z'").fromNow(true) %> önce </span>
                                             </p>
-                                            <!-- <p class="leading-6 line-clamp-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat</p> -->
-                                        </div>
+                                            <div class="row" style="margin-top: -9px; margin-left: 1px;">
+                                                <table>
+                                                    <tr>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon name="share-social-outline"></ion-icon>
+                                                                <span class="text-sm">22</span>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 17vw;" name="heart-outline"></ion-icon>
+                                                                <span class="text-sm">22</span>
+                                                            </div>
+                                                        </td>
+                                                        <td>
+                                                            <div class="flex items-center">
+                                                                <ion-icon style="padding-left: 17vw;" name="chatbubble-ellipses-outline"></ion-icon>
+                                                                <span class="text-sm"><%= element.comment.length %>11 </span>
+                                                            </div>
+                                                        </td>
+                                                    </tr>
+                                                </table>
+                                        </div>                                        </div>
                                     </div>
-                                    <div class="row" style="margin-top: -15px;">
-                                            <table>
-                                                <tr>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 16vw;" name="share-social-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl">3</span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 17vw;" name="heart-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl"> 3 </span>
-                                                        </div>
-                                                    </td>
-                                                    <td>
-                                                        <div class="flex items-center">
-                                                            <ion-icon style="padding-left: 17vw;" name="chatbubble-ellipses-outline" class="text-2xl"></ion-icon>
-                                                            <span class="text-xl"> <%= element.comment.length %>  </span>
-                                                        </div>
-                                                    </td>
-                                                </tr>
-                                            </table>
-                                    </div>
+                                    
                                 </a>
                             </li>
                             <hr style="margin-top: -0px;">
